Puppetdb and puppetmaster work in progress.

--- a/hot/puppetdb/puppetdb.template
+++ b/hot/puppetdb/puppetdb.template
@@ -29,6 +29,7 @@ resources:
       image: { get_param: image }
       flavor: { get_param: flavor }
       admin_user: { get_param: admin_user }
+      name: puppetdb
 
 outputs:
   instance_ip:
